mono and stereo

--- a/spectro_to_music.ipynb
+++ b/spectro_to_music.ipynb
@@ -12,20 +12,17 @@
     "from scipy.io import wavfile\n",
     "import pydub\n",
     "import torch\n",
-    "import torchaudio"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from __future__ import annotations\n",
+    "import torchaudio\n",
     "\n",
+    "from __future__ import annotations\n",
     "import typing as T\n",
     "from dataclasses import dataclass\n",
-    "from enum import Enum"
+    "from enum import Enum\n",
+    "\n",
+    "from riffusion.spectrogram_converter import SpectrogramConverter\n",
+    "from riffusion.spectrogram_params import SpectrogramParams\n",
+    "from riffusion.spectrogram_image_converter import SpectrogramImageConverter\n",
+    "from riffusion.util import image_util"
    ]
   },
   {
@@ -35,22 +32,8 @@
    "outputs": [],
    "source": [
     "# Load spectrogram image and color scale\n",
-    "# img = Image.open('../spectrogram_folder/-_6RxZyi30Q.png')\n",
-    "img1 = Image.open('sample_RGB.png')\n",
-    "img2 = Image.open('sample_grey.png')\n",
-    "# img_data = np.array(img)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from riffusion.spectrogram_converter import SpectrogramConverter\n",
-    "from riffusion.spectrogram_params import SpectrogramParams\n",
-    "from riffusion.spectrogram_image_converter import SpectrogramImageConverter\n",
-    "from riffusion.util import image_util"
+    "img_stereo = Image.open('test/sample_stereo.png')\n",
+    "img_mono = Image.open('test/sample_mono.png')"
    ]
   },
   {
@@ -84,6 +67,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params_stereo = SpectrogramParams(stereo=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SpectrogramParams(stereo=True, sample_rate=44100, step_size_ms=10, window_duration_ms=100, padded_duration_ms=400, num_frequencies=512, min_frequency=0, max_frequency=10000, mel_scale_norm=None, mel_scale_type='htk', max_mel_iters=200, num_griffin_lim_iters=32, power_for_image=0.25)"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params_stereo"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [
@@ -103,64 +115,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/alexandreberkovic/Desktop/MIT/15.S04/music_generation/riffusion/spectrogram_image_converter.py:21: UserWarning: WARNING: cuda is not available, using cpu instead.\n",
+      "  self.converter = SpectrogramConverter(params=params, device=device)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Convert spectrogram image to audio segment\n",
-    "segment1 = converter.audio_from_spectrogram_image(img1, apply_filters=True, max_value=30e6)"
+    "# Create SpectrogramImageConverter object\n",
+    "converter_stereo = SpectrogramImageConverter(params_stereo)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert spectrogram image to audio segment\n",
+    "segment_stereo = converter_stereo.audio_from_spectrogram_image(img1, apply_filters=True, max_value=30e6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<_io.BufferedRandom name='output1.wav'>"
+       "<_io.BufferedRandom name='test/output_stereo.wav'>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Play audio segment\n",
-    "segment1.export(\"output1.wav\", format=\"wav\")"
+    "segment_stereo.export(\"test/output_stereo.wav\", format=\"wav\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert spectrogram image to audio segment\n",
-    "segment2 = converter.audio_from_spectrogram_image(img2, apply_filters=True, max_value=30e6)"
+    "segment_mono = converter.audio_from_spectrogram_image(img2, apply_filters=True, max_value=30e6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<_io.BufferedRandom name='output2.wav'>"
+       "<_io.BufferedRandom name='test/output_mono.wav'>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Play audio segment\n",
-    "segment2.export(\"output2.wav\", format=\"wav\")"
+    "segment_mono.export(\"test/output_mono.wav\", format=\"wav\")"
    ]
   }
  ],
