trials + sound to spectro

--- a/spectro_to_music.ipynb
+++ b/spectro_to_music.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,18 +27,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load spectrogram image and color scale\n",
     "img_stereo = Image.open('test/sample_stereo.png')\n",
-    "img_mono = Image.open('test/sample_mono.png')"
+    "img_mono = Image.open('test/sample_mono.png')\n",
+    "trial = Image.open('test/trial.png')\n",
+    "# oscar = Image.open('../spectrogram_folder/-_6RxZyi30Q.png')\n",
+    "oscar = Image.open('../spectrogram_folder/-OAyRsvFGgc.png')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define the parameters for mono and stereo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +67,7 @@
        "SpectrogramParams(stereo=False, sample_rate=44100, step_size_ms=10, window_duration_ms=100, padded_duration_ms=400, num_frequencies=512, min_frequency=0, max_frequency=10000, mel_scale_norm=None, mel_scale_type='htk', max_mel_iters=200, num_griffin_lim_iters=32, power_for_image=0.25)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +96,7 @@
        "SpectrogramParams(stereo=True, sample_rate=44100, step_size_ms=10, window_duration_ms=100, padded_duration_ms=400, num_frequencies=512, min_frequency=0, max_frequency=10000, mel_scale_norm=None, mel_scale_type='htk', max_mel_iters=200, num_griffin_lim_iters=32, power_for_image=0.25)"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,8 +106,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create the different converters"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -115,21 +134,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/alexandreberkovic/Desktop/MIT/15.S04/music_generation/riffusion/spectrogram_image_converter.py:21: UserWarning: WARNING: cuda is not available, using cpu instead.\n",
-      "  self.converter = SpectrogramConverter(params=params, device=device)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create SpectrogramImageConverter object\n",
     "converter_stereo = SpectrogramImageConverter(params_stereo)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Stereo segment"
    ]
   },
   {
@@ -139,7 +157,7 @@
    "outputs": [],
    "source": [
     "# Convert spectrogram image to audio segment\n",
-    "segment_stereo = converter_stereo.audio_from_spectrogram_image(img1, apply_filters=True, max_value=30e6)"
+    "segment_stereo = converter_stereo.audio_from_spectrogram_image(img_stereo, apply_filters=True, max_value=30e6)"
    ]
   },
   {
@@ -164,13 +182,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Mono segment"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert spectrogram image to audio segment\n",
-    "segment_mono = converter.audio_from_spectrogram_image(img2, apply_filters=True, max_value=30e6)"
+    "segment_mono = converter.audio_from_spectrogram_image(img_mono, apply_filters=True, max_value=30e6)"
    ]
   },
   {
@@ -192,6 +218,259 @@
    "source": [
     "# Play audio segment\n",
     "segment_mono.export(\"test/output_mono.wav\", format=\"wav\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trial segment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert spectrogram image to audio segment\n",
+    "trial_mono = converter.audio_from_spectrogram_image(trial, apply_filters=True, max_value=30e6)\n",
+    "trial_stereo = converter_stereo.audio_from_spectrogram_image(trial, apply_filters=True, max_value=30e6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.BufferedRandom name='test/trial_stereo.wav'>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Play audio segment\n",
+    "trial_mono.export(\"test/trial_mono.wav\", format=\"wav\")\n",
+    "trial_stereo.export(\"test/trial_stereo.wav\", format=\"wav\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Oscar file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = SpectrogramParams(stereo = True, num_frequencies=385)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SpectrogramParams(stereo=True, sample_rate=44100, step_size_ms=10, window_duration_ms=100, padded_duration_ms=400, num_frequencies=385, min_frequency=0, max_frequency=10000, mel_scale_norm=None, mel_scale_type='htk', max_mel_iters=200, num_griffin_lim_iters=32, power_for_image=0.25)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create SpectrogramImageConverter object\n",
+    "converter_oscar = SpectrogramImageConverter(params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "oscar_segment = converter_oscar.audio_from_spectrogram_image(oscar, apply_filters=True, max_value=30e6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.BufferedRandom name='test/oscar3.wav'>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "oscar_segment.export(\"test/oscar3.wav\", format=\"wav\")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using the HuggingFace dataset "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "riffusion_stereo = Image.open('test/riffusion_stereo.jpeg')\n",
+    "riffusion_mono = Image.open('test/riffusion_mono.jpeg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params_mono = SpectrogramParams()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "SpectrogramParams(stereo=False, sample_rate=44100, step_size_ms=10, window_duration_ms=100, padded_duration_ms=400, num_frequencies=512, min_frequency=0, max_frequency=10000, mel_scale_norm=None, mel_scale_type='htk', max_mel_iters=200, num_griffin_lim_iters=32, power_for_image=0.25)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "params_mono"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "param_stereo = SpectrogramParams(stereo=True, num_frequencies = 768)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/alexandreberkovic/Desktop/MIT/15.S04/music_generation/riffusion/spectrogram_image_converter.py:21: UserWarning: WARNING: cuda is not available, using cpu instead.\n",
+      "  self.converter = SpectrogramConverter(params=params, device=device)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create SpectrogramImageConverter object\n",
+    "converter_riffusion_mono = SpectrogramImageConverter(params_mono)\n",
+    "converter_riffusion_stereo = SpectrogramImageConverter(param_stereo)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert spectrogram image to audio segment\n",
+    "riffusion_mono = converter_riffusion_mono.audio_from_spectrogram_image(riffusion_mono, apply_filters=True, max_value=30e6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "riffusion_stereo = converter_riffusion_stereo.audio_from_spectrogram_image(riffusion_stereo, apply_filters=True, max_value=30e6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.BufferedRandom name='test/riffusion_mono.wav'>"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Play audio segment\n",
+    "riffusion_mono.export(\"test/riffusion_mono.wav\", format=\"wav\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_io.BufferedRandom name='test/riffusion_stereo.wav'>"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "riffusion_stereo.export(\"test/riffusion_stereo.wav\", format=\"wav\")"
    ]
   }
  ],
