--- a/spectro_to_music.ipynb
+++ b/spectro_to_music.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,8 @@
     "img_mono = Image.open('test/sample_mono.png')\n",
     "trial = Image.open('test/trial.png')\n",
     "# oscar = Image.open('../spectrogram_folder/-_6RxZyi30Q.png')\n",
-    "oscar = Image.open('../spectrogram_folder/-OAyRsvFGgc.png')\n"
+    "oscar = Image.open('../spectrogram_folder/-OAyRsvFGgc.png')\n",
+    "alex = Image.open('rap.jpg')\n"
    ]
   },
   {
@@ -49,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +68,7 @@
        "SpectrogramParams(stereo=False, sample_rate=44100, step_size_ms=10, window_duration_ms=100, padded_duration_ms=400, num_frequencies=512, min_frequency=0, max_frequency=10000, mel_scale_norm=None, mel_scale_type='htk', max_mel_iters=200, num_griffin_lim_iters=32, power_for_image=0.25)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -191,33 +192,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert spectrogram image to audio segment\n",
-    "segment_mono = converter.audio_from_spectrogram_image(img_mono, apply_filters=True, max_value=30e6)"
+    "segment_mono = converter.audio_from_spectrogram_image(alex, apply_filters=True, max_value=30e6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<_io.BufferedRandom name='test/output_mono.wav'>"
+       "<_io.BufferedRandom name='test/rap.wav'>"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Play audio segment\n",
-    "segment_mono.export(\"test/output_mono.wav\", format=\"wav\")"
+    "segment_mono.export(\"test/rap.wav\", format=\"wav\")"
    ]
   },
   {
